[package]
name = "esp-thum"
version = "0.1.0"
authors = ["Oscar Creator <oscar.creator13@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "esp-thum"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
anyhow = "=1.0.95"
log = "0.4"
esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
embedded-svc = "0.28.1"
toml-cfg = "=0.1.3"
embedded-sht3x = "0.1.0"
serde_json = "1.0.0"
serde = { version = "1.0.219", features = ["derive"] }
# chrono = "0.4.40"

[build-dependencies]
embuild  = "=0.33.0"
toml-cfg = "=0.1.3"
uuid = { version = "=1.9.1", features = ["v4"] }
